--- a/package.json
+++ b/package.json
@@ -5,37 +5,43 @@
   "main": "src/server.ts",
   "author": "Toan Bach",
   "license": "MIT",
+  "type": "commonjs",
   "scripts": {
-    "server": "nodemon src/server.ts",
-    "build": "webpack",
-    "start": "node dist/server.js",
-    "lint": "eslint . --ext .ts",
-    "lint-and-fix": "eslint . --ext .ts --fix"
+    "build": "tsc",
+    "dev": "tsc && node dist/src/server.js",
+    "start": "node dist/src/server.js"
   },
   "dependencies": {
     "@types/heroku-logger": "^1.0.0",
+    "axios": "^1.6.8",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.3.1",
-    "class-validator": "^0.12.2",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
+    "delay": "^4.0.0",
     "dotenv": "^8.2.0",
+    "electron": "^30.0.0",
     "envalid": "^6.0.2",
     "express": "^4.17.1",
     "gravatar": "^1.8.1",
     "helmet": "^4.1.1",
-    "heroku-logger": "^0.3.3",
+    "heroku-logger": "^0.0.2",
     "hpp": "^0.2.3",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
     "normalize-url": "^5.3.0",
-    "socket.io": "^3.1.2",
+    "puppeteer": "^22.6.1",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "screen-size": "^1.0.0",
+    "socket.io": "^4.7.5",
     "swagger-ui-express": "^4.1.5",
     "winston": "^3.3.3",
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@shopify/eslint-plugin": "^39.0.3",
+    "@shopify/eslint-plugin": "^44.0.0",
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.8",
     "@types/express": "^4.17.8",
@@ -50,18 +56,14 @@
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "cross-env": "^7.0.2",
-    "eslint": "^7.15.0",
+    "eslint": "^7.32.0",
     "husky": "^4.3.5",
-    "nodemon": "^2.0.5",
+    "nodemon": "^3.1.0",
     "prettier": "^2.2.1",
     "ts-loader": "^8.0.11",
     "ts-node": "^9.0.0",
     "tsconfig-paths": "^3.9.0",
     "tsconfig-paths-webpack-plugin": "^3.3.0",
-    "typescript": "^4.0.3",
-    "webpack": "^5.10.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-node-externals": "^2.5.2",
-    "webpack-shell-plugin": "^0.5.0"
+    "typescript": "^4.0.3"
   }
 }
