--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc && node dist/src/server.js",
-    "start": "node dist/src/server.js"
+    "test": "tsc && node dist/src/private/test.js",
+    "start": "node dist/src/server.js",
+    "new":"tsc && node dist/src/private/server.js",
+    "test1": "tsc && node dist/src/private/test.js"
   },
   "dependencies": {
     "@types/heroku-logger": "^1.0.0",
@@ -19,7 +22,7 @@
     "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "delay": "^4.0.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "electron": "^30.0.0",
     "envalid": "^6.0.2",
     "express": "^4.17.1",
@@ -31,7 +34,7 @@
     "mongoose": "^5.10.9",
     "morgan": "^1.10.0",
     "normalize-url": "^5.3.0",
-    "puppeteer": "^22.6.1",
+    "puppeteer": "^22.15.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "screen-size": "^1.0.0",
@@ -56,7 +59,7 @@
     "@typescript-eslint/eslint-plugin": "^4.9.1",
     "@typescript-eslint/parser": "^4.9.1",
     "cross-env": "^7.0.2",
-    "eslint": "^7.32.0",
+    "eslint": "^8.3.0",
     "husky": "^4.3.5",
     "nodemon": "^3.1.0",
     "prettier": "^2.2.1",
