--- a/config.json
+++ b/config.json
@@ -13,7 +13,15 @@
       "email":"100057338434870",
       "password":"Quan@123",
       "cookie":"sb=uV42ZmLtgp_wxh4wSPfE4U90; ps_n=1; ps_l=1; datr=iBdLZgWkiRwQQoSOJsCqGzq_; dpr=1.25; c_user=100057338434870; xs=27%3AzYytoQ0BP-mIag%3A2%3A1733307712%3A-1%3A9256; fr=10NFX3UQcZhv5yboZ.AWUV8T4WQqK5akDQaBhMvWK5Yfg.BnUCkH..AAA.0.0.BnUC1C.AWXWDqPMTiM; presence=C%7B%22t3%22%3A%5B%5D%2C%22utc3%22%3A1733307718090%2C%22v%22%3A1%7D; wd=1035x695"
+    },
+    {
+      "id":"61559203291191",
+      "name":"phan_huyen_trang",
+      "email":"61559203291191",
+      "password":"tu211102",
+      "cookie":"datr=AsdRZ7Klhu3oEssMkK4UKwky; sb=AsdRZ2sLZaqhYe57c26iupO6; dpr=1.25; wd=978x738; ps_l=1; ps_n=1; locale=vi_VN; c_user=61559203291191; xs=12%3ArCsPUqhktUN2ew%3A2%3A1733413596%3A-1%3A6278; fr=0boSv9rQy9Xu7jcsg.AWWR1_3T3vv5x9aFtN7AWCLUeU0.BnUccC..AAA.0.0.BnUcre.AWWZSAXMbuA"
     }
+
   ],
   "TDS":[
     {
