--- a/config.json
+++ b/config.json
@@ -28,6 +28,11 @@
       "token":"TDS0nI2IXZ2V2ciojIyVmdlNnIsISOwkDM1R3ZuFGZiojIyV2c1Jye",
       "username":"dangtu0909",
       "password":"tu211102"
+    },
+    {
+      "token":"TDS0nIzIXZ2V2ciojIyVmdlNnIsIyN3MDazBndiojIyV2c1Jye",
+      "username":"vpsh377",
+      "password":"8Y1vmGn21U"
     }
   ]
 }
