--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "dev": "tsc && node dist/src/server.js",
     "test": "tsc && node dist/src/private/test.js",
     "start": "node dist/src/server.js",
-    "new":"tsc && node dist/src/private/server.js",
-    "test1": "tsc && node dist/src/private/test.js"
+    "new": "tsc && node dist/src/private/server.js",
+    "test1": "tsc && node dist/src/private/testLike.js"
   },
   "dependencies": {
     "@types/heroku-logger": "^1.0.0",
@@ -31,10 +31,11 @@
     "heroku-logger": "^0.0.2",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^5.10.9",
+    "mime-types": "^2.1.35",
+    "mongoose": "^8.9.4",
     "morgan": "^1.10.0",
     "normalize-url": "^5.3.0",
-    "puppeteer": "^22.15.0",
+    "puppeteer": "^24.6.0",
     "puppeteer-extra": "^3.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
     "screen-size": "^1.0.0",
@@ -56,10 +57,10 @@
     "@types/socket.io": "^2.1.13",
     "@types/swagger-ui-express": "^4.1.2",
     "@types/yamljs": "^0.2.31",
-    "@typescript-eslint/eslint-plugin": "^4.9.1",
-    "@typescript-eslint/parser": "^4.9.1",
+    "@typescript-eslint/eslint-plugin": "^8.29.0",
+    "@typescript-eslint/parser": "^8.29.0",
     "cross-env": "^7.0.2",
-    "eslint": "^8.3.0",
+    "eslint": "^9.23.0",
     "husky": "^4.3.5",
     "nodemon": "^3.1.0",
     "prettier": "^2.2.1",
